samples/_failures_safe/1761325277_1c785d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d92ff75.c: In function ‘main’:
./samples/SAFE/__tmp_9d92ff75.c:122:24: error: missing terminating " character
  122 |                 printf("Error: Invalid log format. Use: TIMESTAMP LEVEL M
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9d92ff75.c:122:17: error: expected expression at end of input
  122 |                 printf("Error: Invalid log format. Use: TIMESTAMP LEVEL M
      |                 ^~~~~~
./samples/SAFE/__tmp_9d92ff75.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d92ff75.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d92ff75.c:122:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d92ff75.c:122:17: error: expected declaration or statement at end of input
